--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
   "name": "yieldmachine",
-  "version": "0.4.1",
+  "amdName": "yieldmachine",
+  "version": "0.4.3",
   "description": "Declarative state machines using generator functions",
   "source": "src/index.ts",
   "main": "dist/yieldmachine.js",
-  "module": "dist/yieldmachine.modern.js",
+  "module": "dist/yieldmachine.module.js",
+  "umd:main": "dist/yieldmachine.umd.js",
   "unpkg": "dist/yieldmachine.umd.js",
-  "typings": "dist/index.d.ts",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "browser": "./dist/yieldmachine.module.js",
+      "umd": "./dist/yieldmachine.umd.js",
+      "import": "./dist/yieldmachine.mjs",
+      "require": "./dist/yieldmachine.js"
+    }
+  },
   "scripts": {
     "prepack": "jest && npm run build",
     "dev": "microbundle watch",
-    "build": "microbundle --format modern,cjs,umd",
+    "build": "microbundle --raw",
     "test": "jest --watch"
   },
   "author": "Patrick Smith",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^26.6.3",
-    "microbundle": "^0.12.4",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "@types/jest": "^27.0.1",
+    "jest": "^27.2.0",
+    "microbundle": "^0.13.3",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.3"
   }
 }
