--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "author": "Patrick Smith",
   "license": "MIT",
   "devDependencies": {
+    "@testing-library/dom": "^8.6.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "jest": "^27.2.0",
     "microbundle": "^0.13.3",
