--- a/package.json
+++ b/package.json
@@ -6,32 +6,39 @@
   "source": "src/index.ts",
   "main": "dist/yieldmachine.js",
   "module": "dist/yieldmachine.module.js",
-  "umd:main": "dist/yieldmachine.umd.js",
-  "unpkg": "dist/yieldmachine.umd.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "browser": "./dist/yieldmachine.module.js",
-      "umd": "./dist/yieldmachine.umd.js",
-      "import": "./dist/yieldmachine.mjs",
+      "import": "./dist/yieldmachine.module.js",
       "require": "./dist/yieldmachine.js"
+    }
+  },
+  "targets": {
+    "main": {
+      "optimize": true
+    },
+    "module": {
+      "optimize": true
     }
   },
   "scripts": {
     "prepack": "jest && npm run build",
-    "dev": "microbundle watch",
-    "build": "microbundle --raw",
+    "dev": "parcel watch",
+    "build": "parcel build",
     "test": "jest --watch"
   },
   "author": "Patrick Smith",
   "license": "MIT",
   "devDependencies": {
+    "@parcel/packager-ts": "^2.0.0",
+    "@parcel/transformer-typescript-types": "^2.0.0",
     "@testing-library/dom": "^8.6.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "jest": "^27.2.0",
-    "microbundle": "^0.13.3",
+    "parcel": "^2.0.0",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
   }
