--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yieldmachine",
   "amdName": "yieldmachine",
-  "version": "0.4.10",
+  "version": "0.4.11-0",
   "description": "Declarative state machines using generator functions",
   "source": "src/index.ts",
   "main": "dist/yieldmachine.js",
