--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
   "devDependencies": {
     "@parcel/packager-ts": "^2.0.0",
     "@parcel/transformer-typescript-types": "^2.0.0",
+    "@swc/core": "^1.2.162",
+    "@swc/jest": "^0.2.20",
     "@testing-library/dom": "^8.12.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/user-event": "^14.0.4",
     "@types/jest": "^27.4.1",
     "jest": "^27.5.1",
     "parcel": "^2.0.0",
-    "ts-jest": "^27.0.5",
     "typescript": "^4.6.3"
   }
 }
